--- a/src/app/common/components/friends-card/friends-card.component.html
+++ b/src/app/common/components/friends-card/friends-card.component.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div class="mb-2" *ngIf="isNoFriends(friends)">
-                There is no friends. Add friends from <a [routerLink]="['../../']">here</a>. </div>
+                There is no friends. </div>
 
         </div>
     </div>
